framec_tests/language_specific/java/v3_outline/negative/multi_issue_outline_tolerant.frm
@target java

system S {
    machine:
        $A
        e() {
            => $^ oops
            -> $ZZ();
        }
}

